--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "pandas>=2.3.3",
     "rdkit>=2025.9.3",
     "scikit-learn>=1.7.2",
-    "useful-rdkit-utils>=0.93",
+    "useful-rdkit-utils==0.96",
     "altair>=5.3.0",
 ]
 
